[gd_scene load_steps=3 format=3 uid="uid://3l34lll57y6f"]

[ext_resource type="Script" uid="uid://bvmhsshqu5yn3" path="res://scripts/ui/main_menu.gd" id="1_fe2o3"]
[ext_resource type="Texture2D" uid="uid://8ayd3nn5qyst" path="res://assets/textures/ui/steave head stretched.jpg" id="2_fe2o3"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fe2o3")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(1036, 520)
scale = Vector2(1.7297295, 1.1550802)
texture = ExtResource("2_fe2o3")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="New Game" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "New Game"

[node name="Load Game" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Load Game"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="Quit Game" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Load Game" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
